[tool.poetry]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = ["Hemerson Douglas <douglas_godinho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
